@startuml ModeloAppAcademia

class Pessoa {
 -nome: Char
 -sobrenome: Char
 -data_nascimento: Date
 -email: Email
 -endereco: Char
 -telefone: Char
 +login()
 +logout()
 +toString()
}

class Aluno {
 -genero: CharChoices
 -meta: Text
 -fichaMedica: ManyToMany[FichaMedica]
 +toString()
}

class AvaliacaoFisica {
 -peso: Float
 -altura: Float
 -percentual_gordura: Float
 -massa_magra: Float
 -imc: Float
 -data_avaliacao: Date
 -aluno: OneToOne[Aluno]
 +calcular_imc()
 +toString()
}

class AlunoFichaMedica {
 -aluno: ForeignKey[Aluno]
 -fichaMedica: ForeignKey[FichaMedica]
}

class FichaMedica {
 -nome: Char
 -descricao: Text
 +toString()
}

class Treinador {
 -registroCREF: Char
 -tipo_treinamento: CharChoices
 +toString()
}

class FichaTreino {
 -nome: Char
 -descricao: Text
 -criado_em: DateTime
 -ativa: Boolean
 -aluno: ForeignKey[Aluno]
 -treinador: ForeignKey[Treinador]
 +toString()
}

class DiaTreino {
  -dia_treino: CharChoices
 -serie: Integer
 -repeticao: Integer
 -intervalo: Integer
 -observacao: Text
 -exercicio: ForeignKey[Exercicio]
 -ficha_treino: ForeignKey[FichaTreino]
 +toString()
}

class Exercicio {
 -nome: Char
 -descricao: Text
 -esta_ativo: Boolean
 -foto: ImageField
 -grupo_muscular: ForeignKey[GrupoMuscular]
 +toString()
}

class GrupoMuscular {
 -nome: Char
 -descricao: Text
 +toString()
}

class Nutricionista {
 -registroCRN: Char
 -abordagem_nutricional: Char
 +toString()
}

class PlanoAlimentar {
 -nome: Char
 -descricao: Text
 -calorias_diarias: Float
 -criado_em: DateTime
 -ativo: Boolean
 -aluno: ForeignKey[Aluno]
 -nutricionista: ForeignKey[Nutricionista]
 +toString()
}

class Refeicao {
 -nome: Char
 -horario: Time
 -quantidade_gramas: Float
 -descricao: Text
 -alimento: ForeignKey[Alimento]
 -plano_alimentar: ForeignKey[PlanoAlimentar]
 +total_proteinas()
 +total_carboidratos()
 +total_calorias()
 +toString()
}

class Alimento {
 -nome: Char
 -descricao: Text
 -porcao_referencia_gramas: Float
 -calorias: Float
 -proteinas: Float
 -carboidratos: Float
 -gorduras: Float
 -esta_ativo: Boolean
 -foto: ImageField
 -categoria_alimento: ForeignKey[CategoriaAlimento]
 +toString()
}

class CategoriaAlimento {
 -nome: Char
 -descricao: Text
 +toString()
}

' Relacionamentos
Aluno "1" -- "1" AvaliacaoFisica : possui
Aluno *--> FichaTreino : 0..n
Treinador *--> FichaTreino : 0..n
Aluno *--> AlunoFichaMedica : 0..n
FichaMedica *--> AlunoFichaMedica : 0..n

FichaTreino *--> DiaTreino : 1..n
Exercicio *--> DiaTreino : 0..n

Exercicio <--* GrupoMuscular : 1..n

Aluno *--> PlanoAlimentar : 0..n
Nutricionista *--> PlanoAlimentar : 0..n

PlanoAlimentar *--> Refeicao : 1..n
Alimento *--> Refeicao : 0..n

Alimento <--* CategoriaAlimento : 1..n

Aluno -up-|> Pessoa : 1..1
Treinador -up-|> Pessoa : 1..1
Nutricionista -up-|> Pessoa : 1..1

@enduml